# theseus-erp

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: settings.json
alembic/: env.py
alembic/versions/: 204fe0cd3e88_baseline_full_schema.py  72f9ef53dd03_initial_keel_tables.py
blueprints/_test/: related-entities.blueprint.yaml  simple-entity.blueprint.yaml
docs/superpowers/plans/: 2026-04-15-plan1-thin-keel-foundation.md  2026-04-15-plan2-parallel-planks.md  2026-04-15-plan4-the-shipwright.md
docs/superpowers/specs/: 2026-04-15-theseus-erp-architecture-design.md  2026-04-16-plan5-adaptive-interface-hull-design.md
hull-ui/design-system/: hull.css
hull-ui/design-system/components/: maker.html  primitives.html
hull-ui/design-system/tokens/: density.css  (+2 more)
scripts/: docker-smoke.sh
src/theseus/: __init__.py  bootstrap.py  cli.py  config.py  database.py  main.py
tests/: conftest.py  test_alembic_wiring.py  test_cli.py  test_cli_migrate.py
tests/api/: test_assets.py  test_entities.py  test_health.py  test_integration.py  test_maker.py  test_security.py  test_security_integration_token.py  test_shipwright_api.py
tests/integration/: test_cross_plank.py  test_full_pipeline.py  test_shipwright_e2e.py
tests/shipwright/: test_context.py  test_conversation.py  test_engine.py  test_gateway.py  test_tools.py
tests/web/: conftest.py  test_board.py  test_bom.py  test_design_detail.py  test_design_detail_upload_affordance.py  test_file_groups.py  test_file_upload.py  test_foundation.py  test_hull_tokens.py  test_interactivity.py  test_layout.py  test_maker_components.py  test_markets.py  test_primitives.py  test_welcome.py
(+123 files in other folders)
